Add NBA recommendations and agent routing, update UI to Vanguard red theme, fix UUID casting in database client

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "Samy AI Financial Advisor",
-  "short_name": "Samy AI",
+  "name": "Vanguard AI Financial Wellbeing",
+  "short_name": "Vanguard AI",
   "description": "AI-powered financial planning and portfolio management",
-  "theme_color": "#209DD7",
+  "theme_color": "#3C4651",
   "background_color": "#ffffff",
   "display": "standalone",
   "scope": "/",
