--- a/backend/debt_management/pyproject.toml
+++ b/backend/debt_management/pyproject.toml
@@ -1,13 +1,12 @@
 [project]
-name = "planner"
+name = "debt-management"
 version = "0.1.0"
 requires-python = ">=3.12"
 dependencies = [
     "samy-database",
-    "boto3>=1.40.8",
+    "boto3>=1.40.9",
     "langfuse>=3.3.4",
-    "openai-agents[litellm]>=0.3.0",
-    "polygon-api-client>=1.15.3",
+    "openai-agents[litellm]>=0.2.6",
     "pydantic>=2.11.7",
     "pydantic-ai>=1.0.6",
     "python-dotenv>=1.1.1",
@@ -16,3 +15,4 @@ dependencies = [
 
 [tool.uv.sources]
 samy-database = { path = "../database", editable = true }
+
